--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <link href="/css/normalize.css" />
     <link href="/css/base.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="logo"></div>
+  </body>
 </html>
