--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="/css/reset.css" />
-    <link href="/css/normalize.css" />
-    <link href="/css/base.css" />
+    <title>Gift for everyone</title>
+    <link rel="icon" href="images/favicon.ico" type="image/ico" />
+    <link href="/css/reset.css" rel="stylesheet"/>
+    <link href="/css/normalize.css" rel="stylesheet"/>
+    <link href="css/base.css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="logo"></div>
+    <div class="logo"><img src="images/gift1.png">
+      
+       <p class="textlogo"><a href="index.html">Home</a></p>
+       <p class="textlogo2"><a href="index.html">Aboute Us</a></p>
+       <p class="textlogo3"><a href="index.html">Services</a></p>
+       <p class="textlogo4"><a href="index.html">Blogs</a></p>
+      
+       <div class="click1"><h2>GIFT FINDER</h2></div>
+      </div>
+      <div class="shapka"><img src="/images/radost.png">
+      <p><strong> A gift for <br/> your wife or <br/> girlfriend</strong></p>
+      <q> Struggling to find a gift for you wife or </br> girlfriend? No problem!</q>
+    <div class="click2"><h2>FIND GIFT NOW</h2></div>
+      </div>
   </body>
 </html>
