--- a/index.html
+++ b/index.html
@@ -6,24 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gift for everyone</title>
     <link rel="icon" href="images/favicon.ico" type="image/ico" />
+    <link href="/css/fonts/Gilroy/stylesheet.css" rel="stylesheet"/>
     <link href="/css/reset.css" rel="stylesheet"/>
     <link href="/css/normalize.css" rel="stylesheet"/>
     <link href="css/base.css" rel="stylesheet"/>
+    <link href="css/header.css" rel="stylesheet"/>
+    <link href="css/content.css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="logo"><img src="images/gift1.png">
-      
-       <p class="textlogo"><a href="index.html">Home</a></p>
-       <p class="textlogo2"><a href="index.html">Aboute Us</a></p>
-       <p class="textlogo3"><a href="index.html">Services</a></p>
-       <p class="textlogo4"><a href="index.html">Blogs</a></p>
-      
-       <div class="click1"><h2>GIFT FINDER</h2></div>
-      </div>
-      <div class="shapka"><img src="/images/radost.png">
-      <p><strong> A gift for <br/> your wife or <br/> girlfriend</strong></p>
+    <header class="header">
+      <div class="Content1">
+      <img src="images/gift1.png"/>
+      <ul class="list">
+          <li ><a href="index.html">Home</a></li>
+          <li ><a href="index.html">Aboute Us</a></li>
+          <li ><a href="index.html">Services</a></li>
+          <li ><a href="index.html">Blogs</a></li>
+       </ul> 
+    </div>
+       <div class="buttonHeader"><h2>GIFT FINDER</h2></div>
+    </header>
+      <div class="content"><img src="/images/radost.png">
+      <p><strong> Find a gift for <br/> your wife or <br/> girlfriend</strong></p>
       <q> Struggling to find a gift for you wife or </br> girlfriend? No problem!</q>
-    <div class="click2"><h2>FIND GIFT NOW</h2></div>
+    <div class="buttonContent"><h2>FIND GIFT NOW</h2></div>
       </div>
+      <div class="content2"><img src="/images/Thanks.png">
+      <p><strong> How we work</strong></p>
+      <q> We’ve actually already asked hundreds of </br> women what they want, and made a database </br>with the results. All you have to do is take our </br>short survey that only takes seconds, and our </br>proprietary algorithm will match you with a few </br>perfect gift options.</q>
+    <div class="buttonContent2"><h2>LEARN MORE</h2></div>
+  </div>
   </body>
 </html>
