--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="Content1">
-      <img src="images/gift1.png"/>
+        <div class="header_img">
+      <img src="images/gift1.png"/></div>
+      <div class="header_knopki">
       <ul class="list">
           <li ><a href="index.html">Home</a></li>
           <li ><a href="index.html">Aboute Us</a></li>
@@ -24,7 +25,7 @@
           <li ><a href="index.html">Blogs</a></li>
        </ul> 
     </div>
-       <div class="buttonHeader"><h2>GIFT FINDER</h2></div>
+    <div class="buttonHeader"><h2>GIFT FINDER</h2></div>
     </header>
       <div class="content"><img src="/images/radost.png">
       <p><strong> Find a gift for <br/> your wife or <br/> girlfriend</strong></p>
