--- a/index.html
+++ b/index.html
@@ -4,38 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gift for everyone </title>
+    <title>Gift for everyone</title>
     <link rel="icon" href="images/favicon.ico" type="image/ico" />
-    <link href="/css/fonts/Gilroy/stylesheet.css" rel="stylesheet"/>
-    <link href="/css/reset.css" rel="stylesheet"/>
-    <link href="/css/normalize.css" rel="stylesheet"/>
-    <link href="css/base.css" rel="stylesheet"/>
-    <link href="css/header.css" rel="stylesheet"/>
-    <link href="css/content.css" rel="stylesheet"/>
+    <link href="/css/fonts/Gilroy/stylesheet.css" rel="stylesheet" />
+    <link href="/css/reset.css" rel="stylesheet" />
+    <link href="/css/normalize.css" rel="stylesheet" />
+    <link href="css/base.css" rel="stylesheet" />
+    <link href="css/header.css" rel="stylesheet" />
+    <link href="css/content.css" rel="stylesheet" />
+    <link href="css/content2.css" rel="stylesheet" />
+    <link href="css/content3.css" rel="stylesheet" />
   </head>
-  <body>
+  <body id="wrapper">
     <header class="header">
-        <div class="header_img">
-      <img src="images/gift1.png"/></div>
-      <div class="header_knopki">
-      <ul class="list">
-          <li ><a href="index.html">Home</a></li>
-          <li ><a href="index.html">Aboute Us</a></li>
-          <li ><a href="index.html">Services</a></li>
-          <li ><a href="index.html">Blogs</a></li>
-       </ul> 
-    </div>
-    <div class="buttonHeader"><h2>GIFT FINDER</h2></div>
-    </header>
-      <div class="content"><img src="/images/radost.png">
-      <p><strong> Find a gift for <br/> your wife or <br/> girlfriend</strong></p>
-      <q> Struggling to find a gift for you wife or </br> girlfriend? No problem!</q>
-    <div class="buttonContent"><h2>FIND GIFT NOW</h2></div>
+      <div class="header__img">
+        <img src="images/gift1.png" />
       </div>
-      <div class="content2"><img src="/images/Thanks.png">
-      <p><strong> How we work</strong></p>
-      <q> We’ve actually already asked hundreds of </br> women what they want, and made a database </br>with the results. All you have to do is take our </br>short survey that only takes seconds, and our </br>proprietary algorithm will match you with a few </br>perfect gift options.</q>
-    <div class="buttonContent2"><h2>LEARN MORE</h2></div>
-  </div>
+      <div class="header__knopki">
+        <ul class="list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Aboute Us</a></li>
+          <li><a href="index.html">Services</a></li>
+          <li><a href="index.html">Blogs</a></li>
+        </ul>
+      </div>
+      <div class="buttonHeader"><h2>GIFT FINDER</h2></div>
+    </header>
+    <div class="content">
+      <div class="content__img">
+        <img src="/images/radost.png" />
+      </div>
+      <div class="text__content">
+        <p>
+          <strong> Find a gift for your wife or girlfriend</strong>
+        </p>
+        <q>
+          Struggling to find a gift for you wife or <br />
+          girlfriend? No problem!</q
+        >
+      </div>
+      <div class="buttonContent"><h2>FIND GIFT NOW</h2></div>
+    </div>
+    <div class="content2">
+      <img src="/images/Thanks.png" />
+      <div class="text__content2">
+        <p><strong> How we work</strong></p>
+        <q>
+          We’ve actually already asked hundreds of women what they want, a nd
+          made a database with the results. All you have to do is take our short
+          survey that only takes seconds, and our proprietary algorithm will
+          match you with a few perfect gift options.</q
+        >
+      </div>
+      <div class="buttonContent2"><h2>LEARN MORE</h2></div>
+    </div>
+    <div class="content3">
+      <div class="text__content3">
+        <p><strong>Gifts for all Occasions</strong></p>
+        <p>“Try our web app to find the best gifts for all occasions”</p>
+      </div>
+    </div>
   </body>
 </html>
