--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="css/content.css" rel="stylesheet" />
     <link href="css/content2.css" rel="stylesheet" />
     <link href="css/content3.css" rel="stylesheet" />
+    <link href="css/content4.css" rel="stylesheet" />
+    <link href="css/down__Content.css" rel="stylesheet" />
   </head>
   <body id="wrapper">
     <header class="header">
@@ -52,7 +54,7 @@
       <div class="text__content2">
         <p><strong>How we work</strong></p>
         <q>
-          Weve actually already asked hundreds of women what they want, a nd
+          We've actually already asked hundreds of women what they want, a nd
           made a database with the results. All you have to do is take our short
           survey that only takes seconds, and our proprietary algorithm will
           match you with a few perfect gift options.</q
@@ -65,12 +67,58 @@
         <p><strong>Gifts for all Occasions</strong></p>
         <p>“Try our web app to find the best gifts for all occasions”</p>
         <div class="choice__img">
-           <div class="choice1"><img src="/images/birthday.png"><p>Birthday</p><li><a href="index.html">See More ›</li></a></div>
-           <div class="choice2"><img src="/images/gwife.png"><p>Anniversary</p><a href="index.html"><p>See More ›</p></a></div>
-           <div class="choice3"><img src="/images/gift.png" ><p>Valentine's Day</p><a href="index.html"><p>See More ›</p></a></div>
-           <div class="choice4"><img src="/images/yolka.png"><p>Christmas</p><a href="index.html"><p>See More ›</p></a></div>
+           <div class="choice1"><img src="/images/birthday.png"><p>Birthday</p><li><a href="index.html">See More ›</a></li></div>
+           <div class="choice2"><img src="/images/gwife.png"><p>Anniversary</p><li><a href="index.html">See More ›</a></li></div>
+           <div class="choice3"><img src="/images/gift.png" ><p>Valentine's Day</p><li><a href="index.html">See More ›</a></li></div>
+           <div class="choice4"><img src="/images/yolka.png"><p>Christmas</p><li><a href="index.html">See More ›</a></li></div>
         </div>
       </div>
+    </div>
+    <div class="content4">
+      <div class="text__content4">
+        <p><strong>Ready to get started?</strong></p>
+        <p>Sign up or contact us</p>
+          <div class="button__content4">
+            <div class="button1__content4"><h2>FIND GIFT NOW</h2></div>
+              <div class="button2__content4"><h2>HOW IT WORKS</h2></div>
+          </div>
+      </div>
+    </div>
+    <div class="down__content">
+        <div class="text__down__content">
+          <p><strong> Best Blogs Ever</strong></p>
+          <p>“Try our blog to find the best tips and tricks to select 
+            your gift”</p>
+            <div class="block__down__content">
+              <div class="down__content__img">
+                <img src="/images/radost2.png">
+              </div>
+              <div class="text2__down__content">
+              <h2>Mr. John Doe</h2>
+              <p>The best way to wish your wife</p>
+             <li><a href="index.html">Read More ›</a></li>
+            </div>
+            </div>
+          <div class="content6__2block">
+            <div class="footer1__down__contenta">
+              <div class="text3__down_content">
+                <p><strong>Database to find the gifts for your girlfriend</strong></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+                <li><a href="index.html">Read More ›</a></li>
+              </div>
+            </div>
+
+            <div class="footer2__down__contenta">
+              <div class="text4__down_content">
+                <p><strong>How Artificial Intelligence read your mind to find the best gift</strong></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+                <li><a href="index.html">Read More ›</a></li>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
     </div>
   </body>
 </html>
