--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="css/content3.css" rel="stylesheet" />
     <link href="css/content4.css" rel="stylesheet" />
     <link href="css/down__Content.css" rel="stylesheet" />
+    <link href="css/footer.css" rel="stylesheet" />
   </head>
   <body id="wrapper">
     <header class="header">
@@ -33,25 +34,29 @@
       <div class="buttonHeader"><h2>GIFT FINDER</h2></div>
     </header>
     <div class="content">
-      <div class="content__img">
-        <img src="/images/radost.png" />
-      </div>
-      <div class="text__content">
+      <div class="content__text">
         <p>
           <strong> Find a gift for your wife or girlfriend</strong>
         </p>
         <q>
-          Struggling to find a gift for you wife or <br />
-          girlfriend? No problem!</q
+          Struggling to find a gift for you wife or girlfriend? No problem!</q
         >
-        <div class="buttonContent"><h2>FIND GIFT NOW</h2></div>
+        <div class="content__button"><h2>FIND GIFT NOW</h2></div>
+      </div>
+      <div class="content__img-wrapper">
+        <div class="content__img">
+          <img class="div1__img" src="/images/radost.png" />
+        </div>
       </div>
     </div>
+
     <div class="content2">
-      <div class="content__img2">
-      <img src="/images/Thanks.png" />
+      <div class="content2__img-wrapper">
+        <div class="content__img2">
+          <img class="content2__img2" src="/images/Thanks.png" />
+        </div>
       </div>
-      <div class="text__content2">
+      <div class="content2__text">
         <p><strong>How we work</strong></p>
         <q>
           We've actually already asked hundreds of women what they want, a nd
@@ -59,66 +64,117 @@
           survey that only takes seconds, and our proprietary algorithm will
           match you with a few perfect gift options.</q
         >
-        <div class="buttonContent2"><h2>LEARN MORE</h2></div>
+        <div class="content2__button"><h2>LEARN MORE</h2></div>
       </div>
     </div>
     <div class="content3">
-      <div class="text__content3">
+      <div class="content3__text">
         <p><strong>Gifts for all Occasions</strong></p>
         <p>“Try our web app to find the best gifts for all occasions”</p>
-        <div class="choice__img">
-           <div class="choice1"><img src="/images/birthday.png"><p>Birthday</p><li><a href="index.html">See More ›</a></li></div>
-           <div class="choice2"><img src="/images/gwife.png"><p>Anniversary</p><li><a href="index.html">See More ›</a></li></div>
-           <div class="choice3"><img src="/images/gift.png" ><p>Valentine's Day</p><li><a href="index.html">See More ›</a></li></div>
-           <div class="choice4"><img src="/images/yolka.png"><p>Christmas</p><li><a href="index.html">See More ›</a></li></div>
+      </div>
+      <div class="content3__knopki-img">
+        <div class="choice1">
+          <img src="/images/birthday.png" />
+          <p>Birthday</p>
+          <li><a href="index.html">See More ›</a></li>
+        </div>
+        <div class="choice2">
+          <img src="/images/gwife.png" />
+          <p>Anniversary</p>
+          <li><a href="index.html">See More ›</a></li>
+        </div>
+        <div class="choice3">
+          <img src="/images/gift.png" />
+          <p>Valentine's Day</p>
+          <li><a href="index.html">See More ›</a></li>
+        </div>
+        <div class="choice4">
+          <img src="/images/yolka.png" />
+          <p>Christmas</p>
+          <li><a href="index.html">See More ›</a></li>
         </div>
       </div>
     </div>
     <div class="content4">
-      <div class="text__content4">
+      <div class="content4__text">
         <p><strong>Ready to get started?</strong></p>
         <p>Sign up or contact us</p>
-          <div class="button__content4">
-            <div class="button1__content4"><h2>FIND GIFT NOW</h2></div>
-              <div class="button2__content4"><h2>HOW IT WORKS</h2></div>
-          </div>
+      </div>
+      <div class="content4__button">
+        <div class="content4__button1"><h2>FIND GIFT NOW</h2></div>
+        <div class="content4__button2"><h2>HOW IT WORKS</h2></div>
       </div>
     </div>
-    <div class="down__content">
-        <div class="text__down__content">
-          <p><strong> Best Blogs Ever</strong></p>
-          <p>“Try our blog to find the best tips and tricks to select 
-            your gift”</p>
-            <div class="block__down__content">
-              <div class="down__content__img">
-                <img src="/images/radost2.png">
-              </div>
-              <div class="text2__down__content">
-              <h2>Mr. John Doe</h2>
-              <p>The best way to wish your wife</p>
-             <li><a href="index.html">Read More ›</a></li>
-            </div>
-            </div>
-          <div class="content6__2block">
-            <div class="footer1__down__contenta">
-              <div class="text3__down_content">
-                <p><strong>Database to find the gifts for your girlfriend</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
-                <li><a href="index.html">Read More ›</a></li>
-              </div>
-            </div>
 
-            <div class="footer2__down__contenta">
-              <div class="text4__down_content">
-                <p><strong>How Artificial Intelligence read your mind to find the best gift</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
-                <li><a href="index.html">Read More ›</a></li>
-              </div>
-            </div>
+    
+    <div class="down__content">
+      <div class="text__down__content">
+        <p><strong> Best Blogs Ever</strong></p>
+        <p>
+          “Try our blog to find the best tips and tricks to select your gift”
+        </p>
+      </div>
+        <div class="block__down__content">
+          <div class="down__content__img">
+            <img src="/images/radost2.png" />
+          </div>
+          <div class="text2__down__content">
+            <h2>Mr. John Doe</h2>
+            <p>The best way to wish your wife</p>
+            <li><a href="index.html">Read More ›</a></li>
           </div>
         </div>
 
 
+        <div class="content6__2block">
+          <div class="footer1__down__contenta">
+            <div class="text3__down_content">
+              <p>
+                <strong>Database to find the gifts for your girlfriend</strong>
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore...
+              </p>
+              <li><a href="index.html">Read More ›</a></li>
+            </div>
+          </div>
+
+          <div class="footer2__down__contenta">
+            <div class="text4__down_content">
+              <p>
+                <strong
+                  >How Artificial Intelligence read your mind to find the best
+                  gift</strong
+                >
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore...
+              </p>
+              <li><a href="index.html">Read More ›</a></li>
+            </div>
+          </div>
+        </div>
+
+      
+    </div> -->
+    <!-- <div class="footer__block">
+      <div class="all__knopki__footer">
+        <div class="footer__knopki">
+          <ul class="list1__footer">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Aboute</a></li>
+          </ul>
+        </div>
+        <div class="footer__img"><img src="/images/gift2.png" /></div>
+        <div class="footer__knopki2">
+          <ul class="list2__footer">
+            <li><a href="index.html">Service</a></li>
+            <li><a href="index.html">Blog</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
