--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
         </div>
 
       
-    </div> -->
-    <!-- <div class="footer__block">
+    </div>
+    <div class="footer__block">
+      <div class="all_knopki__hr__footer">
       <div class="all__knopki__footer">
         <div class="footer__knopki">
           <ul class="list1__footer">
@@ -175,6 +176,21 @@
           </ul>
         </div>
       </div>
+      <div class="footer__hr">
+      <hr>
+    </div>
+      </div>
+      <div class="footer__logos">
+      <a href="index.html"><img src="/images/facebook.svg"></a>
+      <a href="index.html"> <img src="/images/twitter.svg"></a>
+        <a href="index.html"><img src="/images/insta.svg"></a>
+          <a href="index.html"><img src="/images/youtube.svg"></a>
+            <a href="index.html"> <img src="/images/pinterest.svg"></a>
+      </div>
+        <div class="footer__text__license">
+          <p>© 2010 — 2020</p>
+             <p>Privacy — Terms</p>
+          </div>
     </div>
   </body>
 </html>
