almost the final

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="images/gift1.png" />
       </div>
       <div class="header__knopki">
-        <ul class="list">
+        <ul class="header__list">
           <li><a href="index.html">Home</a></li>
           <li><a href="index.html">Aboute Us</a></li>
           <li><a href="index.html">Services</a></li>
@@ -73,22 +73,22 @@
         <p>“Try our web app to find the best gifts for all occasions”</p>
       </div>
       <div class="content3__knopki-img">
-        <div class="choice1">
+        <div class="content3__choice1">
           <img src="/images/birthday.png" />
           <p>Birthday</p>
           <li><a href="index.html">See More ›</a></li>
         </div>
-        <div class="choice2">
+        <div class="content3__choice2">
           <img src="/images/gwife.png" />
           <p>Anniversary</p>
           <li><a href="index.html">See More ›</a></li>
         </div>
-        <div class="choice3">
+        <div class="content3__choice3">
           <img src="/images/gift.png" />
           <p>Valentine's Day</p>
           <li><a href="index.html">See More ›</a></li>
         </div>
-        <div class="choice4">
+        <div class="content4__choice4">
           <img src="/images/yolka.png" />
           <p>Christmas</p>
           <li><a href="index.html">See More ›</a></li>
@@ -108,17 +108,17 @@
 
     
     <div class="down__content">
-      <div class="text__down__content">
+      <div class="down__text__content">
         <p><strong> Best Blogs Ever</strong></p>
         <p>
           “Try our blog to find the best tips and tricks to select your gift”
         </p>
       </div>
-        <div class="block__down__content">
+        <div class="down__block__content">
           <div class="down__content__img">
             <img src="/images/radost2.png" />
           </div>
-          <div class="text2__down__content">
+          <div class="content6__text2__down">
             <h2>Mr. John Doe</h2>
             <p>The best way to wish your wife</p>
             <li><a href="index.html">Read More ›</a></li>
@@ -127,8 +127,8 @@
 
 
         <div class="content6__2block">
-          <div class="footer1__down__contenta">
-            <div class="text3__down_content">
+          <div class="content6__footer1__down">
+            <div class="content6__text3__down">
               <p>
                 <strong>Database to find the gifts for your girlfriend</strong>
               </p>
@@ -140,8 +140,8 @@
             </div>
           </div>
 
-          <div class="footer2__down__contenta">
-            <div class="text4__down_content">
+          <div class="content6__footer2__down">
+            <div class="content6__text4__down">
               <p>
                 <strong
                   >How Artificial Intelligence read your mind to find the best
@@ -160,17 +160,17 @@
       
     </div>
     <div class="footer__block">
-      <div class="all_knopki__hr__footer">
-      <div class="all__knopki__footer">
+      <div class="footer__all_knopki__hr">
+      <div class="footer__all__knopki">
         <div class="footer__knopki">
-          <ul class="list1__footer">
+          <ul class="footer__list1">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html">Aboute</a></li>
           </ul>
         </div>
         <div class="footer__img"><img src="/images/gift2.png" /></div>
         <div class="footer__knopki2">
-          <ul class="list2__footer">
+          <ul class="footer__list2">
             <li><a href="index.html">Service</a></li>
             <li><a href="index.html">Blog</a></li>
           </ul>
