--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     
     <div class="down__content">
       <div class="down__text__content">
-        <p><strong> Best Blogs Ever</strong></p>
+        <p><strong> Our best Blogs Ever</strong></p>
         <p>
           “Try our blog to find the best tips and tricks to select your gift”
         </p>
