--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="index.html">Blogs</a></li>
         </ul>
       </div>
-      <div class="buttonHeader"><h2>GIFT FINDER</h2></div>
+     <div class="buttonHeader"><a href="index.html"><h2>GIFT FINDER</h2></a></div>
     </header>
     <div class="content">
       <div class="content__text">
@@ -41,7 +41,7 @@
         <q>
           Struggling to find a gift for you wife or girlfriend? No problem!</q
         >
-        <div class="content__button"><h2>FIND GIFT NOW</h2></div>
+        <div class="content__button"><a href="index.html"><h2>FIND GIFT NOW</h2></a></div>
       </div>
       <div class="content__img-wrapper">
         <div class="content__img">
@@ -64,7 +64,7 @@
           survey that only takes seconds, and our proprietary algorithm will
           match you with a few perfect gift options.</q
         >
-        <div class="content2__button"><h2>LEARN MORE</h2></div>
+        <div class="content2__button"><a href="index.html" class="content2__button__a"><h2>LEARN MORE</h2></a></div>
       </div>
     </div>
     <div class="content3">
@@ -101,12 +101,10 @@
         <p>Sign up or contact us</p>
       </div>
       <div class="content4__button">
-        <div class="content4__button1"><h2>FIND GIFT NOW</h2></div>
-        <div class="content4__button2"><h2>HOW IT WORKS</h2></div>
+        <div class="content4__button1"><a href="index.html" class="content2__button__a"><h2>FIND GIFT NOW</h2></a></div>
+        <div class="content4__button2"><a href="index.html" class="content2__button__a"><h2>HOW IT WORKS</h2></a></div>
       </div>
     </div>
-
-    
     <div class="down__content">
       <div class="down__text__content">
         <p><strong> Our best Blogs Ever</strong></p>
