--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href="css/down__Content.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
   </head>
+
   <body id="wrapper">
     <header class="header">
       <div class="header__img">
@@ -31,7 +32,9 @@
           <li><a href="index.html">Blogs</a></li>
         </ul>
       </div>
-     <div class="buttonHeader"><a href="index.html"><h2>GIFT FINDER</h2></a></div>
+      <div class="buttonHeader">
+        <a href="index.html"><h2>GIFT FINDER</h2></a>
+      </div>
     </header>
     <div class="content">
       <div class="content__text">
@@ -41,7 +44,9 @@
         <q>
           Struggling to find a gift for you wife or girlfriend? No problem!</q
         >
-        <div class="content__button"><a href="index.html"><h2>FIND GIFT NOW</h2></a></div>
+        <div class="content__button">
+          <a href="index.html"><h2>FIND GIFT NOW</h2></a>
+        </div>
       </div>
       <div class="content__img-wrapper">
         <div class="content__img">
@@ -64,7 +69,11 @@
           survey that only takes seconds, and our proprietary algorithm will
           match you with a few perfect gift options.</q
         >
-        <div class="content2__button"><a href="index.html" class="content2__button__a"><h2>LEARN MORE</h2></a></div>
+        <div class="content2__button">
+          <a href="index.html" class="content2__button__a"
+            ><h2>LEARN MORE</h2></a
+          >
+        </div>
       </div>
     </div>
     <div class="content3">
@@ -101,8 +110,16 @@
         <p>Sign up or contact us</p>
       </div>
       <div class="content4__button">
-        <div class="content4__button1"><a href="index.html" class="content2__button__a"><h2>FIND GIFT NOW</h2></a></div>
-        <div class="content4__button2"><a href="index.html" class="content2__button__a"><h2>HOW IT WORKS</h2></a></div>
+        <div class="content4__button1">
+          <a href="index.html" class="content2__button__a"
+            ><h2>FIND GIFT NOW</h2></a
+          >
+        </div>
+        <div class="content4__button2">
+          <a href="index.html" class="content2__button__a"
+            ><h2>HOW IT WORKS</h2></a
+          >
+        </div>
       </div>
     </div>
     <div class="down__content">
@@ -112,83 +129,80 @@
           “Try our blog to find the best tips and tricks to select your gift”
         </p>
       </div>
-        <div class="down__block__content">
-          <div class="down__content__img">
-            <img src="/images/radost2.png" />
-          </div>
-          <div class="content6__text2__down">
-            <h2>Mr. John Doe</h2>
-            <p>The best way to wish your wife</p>
+      <div class="down__block__content">
+        <div class="down__content__img">
+          <img src="/images/radost2.png" />
+        </div>
+        <div class="content6__text2__down">
+          <h2>Mr. John Doe</h2>
+          <p>The best way to wish your wife</p>
+          <li><a href="index.html">Read More ›</a></li>
+        </div>
+      </div>
+
+      <div class="content6__2block">
+        <div class="content6__footer1__down">
+          <div class="content6__text3__down">
+            <p>
+              <strong>Database to find the gifts for your girlfriend</strong>
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore...
+            </p>
             <li><a href="index.html">Read More ›</a></li>
           </div>
         </div>
 
-
-        <div class="content6__2block">
-          <div class="content6__footer1__down">
-            <div class="content6__text3__down">
-              <p>
-                <strong>Database to find the gifts for your girlfriend</strong>
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore...
-              </p>
-              <li><a href="index.html">Read More ›</a></li>
-            </div>
-          </div>
-
-          <div class="content6__footer2__down">
-            <div class="content6__text4__down">
-              <p>
-                <strong
-                  >How Artificial Intelligence read your mind to find the best
-                  gift</strong
-                >
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore...
-              </p>
-              <li><a href="index.html">Read More ›</a></li>
-            </div>
+        <div class="content6__footer2__down">
+          <div class="content6__text4__down">
+            <p>
+              <strong
+                >How Artificial Intelligence read your mind to find the best
+                gift</strong
+              >
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore...
+            </p>
+            <li><a href="index.html">Read More ›</a></li>
           </div>
         </div>
-
-      
+      </div>
     </div>
     <div class="footer__block">
       <div class="footer__all_knopki__hr">
-      <div class="footer__all__knopki">
-        <div class="footer__knopki">
-          <ul class="footer__list1">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Aboute</a></li>
-          </ul>
+        <div class="footer__all__knopki">
+          <div class="footer__knopki">
+            <ul class="footer__list1">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">Aboute</a></li>
+            </ul>
+          </div>
+          <div class="footer__img"><img src="/images/gift2.png" /></div>
+          <div class="footer__knopki2">
+            <ul class="footer__list2">
+              <li><a href="index.html">Service</a></li>
+              <li><a href="index.html">Blog</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="footer__img"><img src="/images/gift2.png" /></div>
-        <div class="footer__knopki2">
-          <ul class="footer__list2">
-            <li><a href="index.html">Service</a></li>
-            <li><a href="index.html">Blog</a></li>
-          </ul>
+        <div class="footer__hr">
+          <hr />
         </div>
-      </div>
-      <div class="footer__hr">
-      <hr>
-    </div>
       </div>
       <div class="footer__logos">
-      <a href="index.html"><img src="/images/facebook.svg"></a>
-      <a href="index.html"> <img src="/images/twitter.svg"></a>
-        <a href="index.html"><img src="/images/insta.svg"></a>
-          <a href="index.html"><img src="/images/youtube.svg"></a>
-            <a href="index.html"> <img src="/images/pinterest.svg"></a>
+        <a href="index.html"><img src="/images/facebook.svg" /></a>
+        <a href="index.html"> <img src="/images/twitter.svg" /></a>
+        <a href="index.html"><img src="/images/insta.svg" /></a>
+        <a href="index.html"><img src="/images/youtube.svg" /></a>
+        <a href="index.html"> <img src="/images/pinterest.svg" /></a>
       </div>
-        <div class="footer__text__license">
-          <p>© 2010 — 2020</p>
-             <p>Privacy — Terms</p>
-          </div>
+      <div class="footer__text__license">
+        <p>© 2010 — 2020</p>
+        <p>Privacy — Terms</p>
+      </div>
     </div>
   </body>
 </html>
